kubernetes/traefik-hsts.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-hsts
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
