kubernetes/traefik-redirect-to-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: 443
