kubernetes/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cscs
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "1000m"
              memory: "1000Mi"
