kubernetes/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    app: redmine
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: redmine
