kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mutix
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  sessionAffinity: None
  type: NodePort
