kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cscs-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: redmine-tls
      hosts:
        - task.cscs.asia
  rules:
  - host: task.cscs.asia
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: redmine
              port:
                number: 80
